deployment.yaml
apiVersion: apps/v1

kind: Deployment

metadata:

  name: python-deployment

  labels:

    app: python

spec:

  replicas: 2

  selector:

    matchLabels:

      app: python

  template:

    metadata:

      labels:

        app: python

    spec:

      containers:

      - name: flask-app

        image: karaleaditya7/kubernetes-pro:latest

        ports:

        - containerPort: 5000
