service.yaml
kind: Service
apiVersion: v1
metadata:
  name: python-service
spec:
  selector:
    app: python
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: NodePort
