python-service-ingress.yaml
apiVersion: networking.k8s.io/v1
   
kind: Ingress
   
metadata:
   
  name: python-ingress
     
spec:
   
  rules:
   
    - host: python-app.com
      http:
   
        paths:
   
          - path: /
   
            pathType: Prefix
   
            backend:
   
              service:
   
                name: python-service
   
                port:
   
                  number: 80
